fixed host group manes

--- a/templates/blueprints/cluster_1_master.json.erb
+++ b/templates/blueprints/cluster_1_master.json.erb
@@ -114,7 +114,7 @@
                     "name": "DRPC_SERVER"
                 }
             ],
-            "name": "master_node"
+            "name": "master_nodes"
         },
         {
             "cardinality": "<%= @num_datanodes %>",
@@ -162,7 +162,7 @@
                     "name": "DATANODE"
                 }
             ],
-            "name": "data_node"
+            "name": "data_nodes"
         }
     ]
 }
