Fixed ports. Incorrect port was used 8440, which is for Ambari internal comms use only

--- a/templates/agent/ambari-agent.ini.erb
+++ b/templates/agent/ambari-agent.ini.erb
@@ -14,8 +14,8 @@
 
 [server]
 hostname=<%= @ambari_server %>
-url_port=<%= @ambari_server_port %>
-secured_url_port=<%= @ambari_server_secure_port %>
+url_port=<%= @ambari_comm_port %>
+secured_url_port=<%= @ambari_comm_secure_port %>
 connect_retry_delay=10
 max_reconnect_retry_delay=30
 
