changed hostnames (removed .local). added METRICS_GRAFANA to tiny blueprint

--- a/templates/blueprint/cluster_tiny_1_master.json.erb
+++ b/templates/blueprint/cluster_tiny_1_master.json.erb
@@ -16,11 +16,15 @@
                     "name": "METRICS_MONITOR"
                 },
                 {
+                    "name": "METRICS_GRAFANA"
+                },
+                {
                     "name": "ZOOKEEPER_SERVER"
                 },
                 {
                     "name": "ZOOKEEPER_CLIENT"
                 }
+
             ],
             "name": "master_nodes"
         },
