--- a/templates/blueprint/hostmap.json.erb
+++ b/templates/blueprint/hostmap.json.erb
@@ -5,7 +5,7 @@
         {
             "hosts": [
                 {
-                    "fqdn": "puppet.local"
+                    "fqdn": "puppet"
                 }
             ],
             "name": "master_nodes"
