--- a/templates/blueprint/cluster_1_master.json.erb
+++ b/templates/blueprint/cluster_1_master.json.erb
@@ -2,7 +2,7 @@
     "Blueprints": {
         "blueprint_name": "hdp1",
         "stack_name": "HDP",
-        "stack_version": "2.6"
+        "stack_version": "<%= @hdp_stack_version %>"
     },
     "configurations" : [
      {
