--- a/puppet-ambari/templates/blueprint/cluster_full_stack.json.erb
+++ b/puppet-ambari/templates/blueprint/cluster_full_stack.json.erb
@@ -10,7 +10,7 @@
       "core-site": {
         "properties" : {
           "fs.defaultFS" : "hdfs://<%= @hdp_hdfs_nameservice_id %>",
-          "ha.zookeeper.quorum" : "%HOSTGROUP::host1%:2181,%HOSTGROUP::host2%:2181,%HOSTGROUP::host3%:2181"
+          "ha.zookeeper.quorum" : "%HOSTGROUP::master_node_1%:2181,%HOSTGROUP::master_node_2%:2181,%HOSTGROUP::master_node_3%:2181"
         }
       }
     },
@@ -21,15 +21,15 @@
           "dfs.ha.automatic-failover.enabled" : "true",
           "dfs.ha.fencing.methods" : "shell(/bin/true)",
           "dfs.ha.namenodes.<%= @hdp_hdfs_nameservice_id %>" : "nn1,nn2",
-          "dfs.namenode.http-address" : "%HOSTGROUP::host1%:50070",
-          "dfs.namenode.http-address.<%= @hdp_hdfs_nameservice_id %>.nn1" : "%HOSTGROUP::host1%:50070",
-          "dfs.namenode.http-address.<%= @hdp_hdfs_nameservice_id %>.nn2" : "%HOSTGROUP::host2%:50070",
-          "dfs.namenode.https-address" : "%HOSTGROUP::host1%:50470",
-          "dfs.namenode.https-address.<%= @hdp_hdfs_nameservice_id %>.nn1" : "%HOSTGROUP::host1%:50470",
-          "dfs.namenode.https-address.<%= @hdp_hdfs_nameservice_id %>.nn2" : "%HOSTGROUP::host2%:50470",
-          "dfs.namenode.rpc-address.<%= @hdp_hdfs_nameservice_id %>.nn1" : "%HOSTGROUP::host1%:8020",
-          "dfs.namenode.rpc-address.<%= @hdp_hdfs_nameservice_id %>.nn2" : "%HOSTGROUP::host2%:8020",
-          "dfs.namenode.shared.edits.dir" : "qjournal://%HOSTGROUP::host1%:8485;%HOSTGROUP::host2%:8485;%HOSTGROUP::host3%:8485/<%= @hdp_hdfs_nameservice_id %>",
+          "dfs.namenode.http-address" : "%HOSTGROUP::master_node_1%:50070",
+          "dfs.namenode.http-address.<%= @hdp_hdfs_nameservice_id %>.nn1" : "%HOSTGROUP::master_node_1%:50070",
+          "dfs.namenode.http-address.<%= @hdp_hdfs_nameservice_id %>.nn2" : "%HOSTGROUP::master_node_2%:50070",
+          "dfs.namenode.https-address" : "%HOSTGROUP::master_node_1%:50470",
+          "dfs.namenode.https-address.<%= @hdp_hdfs_nameservice_id %>.nn1" : "%HOSTGROUP::master_node_1%:50470",
+          "dfs.namenode.https-address.<%= @hdp_hdfs_nameservice_id %>.nn2" : "%HOSTGROUP::master_node_2%:50470",
+          "dfs.namenode.rpc-address.<%= @hdp_hdfs_nameservice_id %>.nn1" : "%HOSTGROUP::master_node_1%:8020",
+          "dfs.namenode.rpc-address.<%= @hdp_hdfs_nameservice_id %>.nn2" : "%HOSTGROUP::master_node_2%:8020",
+          "dfs.namenode.shared.edits.dir" : "qjournal://%HOSTGROUP::master_node_1%:8485;%HOSTGROUP::master_node_2%:8485;%HOSTGROUP::master_node_3%:8485/<%= @hdp_hdfs_nameservice_id %>",
           "dfs.nameservices" : "<%= @hdp_hdfs_nameservice_id %>"
         }
       }
@@ -38,28 +38,28 @@
       "yarn-site" : {
         "properties" : {
           "hadoop.registry.rm.enabled" : "false",
-          "hadoop.registry.zk.quorum" : "%HOSTGROUP::host3%:2181,%HOSTGROUP::host2%:2181,%HOSTGROUP::host1%:2181",
-          "yarn.log.server.url" : "http://%HOSTGROUP::host2%:19888/jobhistory/logs",
-          "yarn.resourcemanager.address" : "%HOSTGROUP::host2%:8050",
-          "yarn.resourcemanager.admin.address" : "%HOSTGROUP::host2%:8141",
+          "hadoop.registry.zk.quorum" : "%HOSTGROUP::master_node_3%:2181,%HOSTGROUP::master_node_2%:2181,%HOSTGROUP::master_node_1%:2181",
+          "yarn.log.server.url" : "http://%HOSTGROUP::master_node_2%:19888/jobhistory/logs",
+          "yarn.resourcemanager.address" : "%HOSTGROUP::master_node_2%:8050",
+          "yarn.resourcemanager.admin.address" : "%HOSTGROUP::master_node_2%:8141",
           "yarn.resourcemanager.cluster-id" : "yarn-cluster",
           "yarn.resourcemanager.ha.automatic-failover.zk-base-path" : "/yarn-leader-election",
           "yarn.resourcemanager.ha.enabled" : "true",
           "yarn.resourcemanager.ha.rm-ids" : "rm1,rm2",
-          "yarn.resourcemanager.hostname" : "%HOSTGROUP::host2%",
+          "yarn.resourcemanager.hostname" : "%HOSTGROUP::master_node_2%",
           "yarn.resourcemanager.recovery.enabled" : "true",
-          "yarn.resourcemanager.resource-tracker.address" : "%HOSTGROUP::host2%:8025",
-          "yarn.resourcemanager.scheduler.address" : "%HOSTGROUP::host2%:8030",
+          "yarn.resourcemanager.resource-tracker.address" : "%HOSTGROUP::master_node_2%:8025",
+          "yarn.resourcemanager.scheduler.address" : "%HOSTGROUP::master_node_2%:8030",
           "yarn.resourcemanager.store.class" : "org.apache.hadoop.yarn.server.resourcemanager.recovery.ZKRMStateStore",
-          "yarn.resourcemanager.webapp.address" : "%HOSTGROUP::host2%:8088",
-          "yarn.resourcemanager.webapp.https.address" : "%HOSTGROUP::host2%:8090",
-          "yarn.timeline-service.address" : "%HOSTGROUP::host2%:10200",
-          "yarn.timeline-service.webapp.address" : "%HOSTGROUP::host2%:8188",
-          "yarn.timeline-service.webapp.https.address" : "%HOSTGROUP::host2%:8190",
-          "yarn.resourcemanager.hostname.rm1" : "%HOSTGROUP::host2%",
-          "yarn.resourcemanager.hostname.rm2" : "%HOSTGROUP::host3%",
-          "yarn.resourcemanager.webapp.address.rm1" : "%HOSTGROUP::host2%:8088",
-          "yarn.resourcemanager.webapp.address.rm2" : "%HOSTGROUP::host3%:8088"
+          "yarn.resourcemanager.webapp.address" : "%HOSTGROUP::master_node_2%:8088",
+          "yarn.resourcemanager.webapp.https.address" : "%HOSTGROUP::master_node_2%:8090",
+          "yarn.timeline-service.address" : "%HOSTGROUP::master_node_2%:10200",
+          "yarn.timeline-service.webapp.address" : "%HOSTGROUP::master_node_2%:8188",
+          "yarn.timeline-service.webapp.https.address" : "%HOSTGROUP::master_node_2%:8190",
+          "yarn.resourcemanager.hostname.rm1" : "%HOSTGROUP::master_node_2%",
+          "yarn.resourcemanager.hostname.rm2" : "%HOSTGROUP::master_node_3%",
+          "yarn.resourcemanager.webapp.address.rm1" : "%HOSTGROUP::master_node_2%:8088",
+          "yarn.resourcemanager.webapp.address.rm2" : "%HOSTGROUP::master_node_3%:8088"
         }
       }
     },
@@ -262,6 +262,7 @@
     }
   ],
     "settings" : [
+      {
         "deployment_settings": [
             {"skip_failure":"true"}
         ],
@@ -279,6 +280,8 @@
                 "base_url":"http://public-repo-1.hortonworks.com/HDP-UTILS-1.1.0.21/repos/centos7"
             }
         ]
+    
+      }
     ]
     
 }
