--- a/puppet-ambari/templates/blueprint/hostmap_full_stack.json.erb
+++ b/puppet-ambari/templates/blueprint/hostmap_full_stack.json.erb
@@ -23,6 +23,14 @@
                 <% end -%>
             ],
             "name": "worker_nodes"
+        },
+        {
+            "hosts": [
+                {
+                    "fqdn": "<%= elastic_node %>"
+                }
+            ],
+            "name": "elastic_node %>"
         }
         
     ]
