added elastic mpack

--- a/puppet-ambari/templates/blueprint/cluster_full_stack.json.erb
+++ b/puppet-ambari/templates/blueprint/cluster_full_stack.json.erb
@@ -264,7 +264,7 @@
       "cardinality": "<%= @worker_nodes.size %>" 
     },
     {
-      "name": "elasitc_node",
+      "name": "elastic_nodes",
       "configurations": [],
       "components": [
         {
