--- a/puppet-ambari/templates/blueprint/hostmap_full_stack.json.erb
+++ b/puppet-ambari/templates/blueprint/hostmap_full_stack.json.erb
@@ -27,10 +27,10 @@
         {
             "hosts": [
                 {
-                    "fqdn": "<%= elastic_node %>"
+                    "fqdn": "<%= @elastic_nodes %>"
                 }
             ],
-            "name": "elastic_node %>"
+            "name": "elastic_nodes"
         }
         
     ]
