--- a/puppet-ambari/templates/blueprint/cluster_full_stack.json.erb
+++ b/puppet-ambari/templates/blueprint/cluster_full_stack.json.erb
@@ -41,9 +41,9 @@
       "hadoop-env": {
 	"properties_attributes": { },
 	"properties": {
-		"dtnode_heapsize": "1G",
+		"dtnode_heapsize": "1024m",
 		"namenode_opt_newsize": "100m",
-		"namenode_heapsize": "2G",
+		"namenode_heapsize": "2048m",
 		"namenode_opt_maxpermsize": "256m"
         }
       }
